rgw: dont spawn error_repo until lease is acquired

if RGWDataSyncShardCR fails to acquire its lease, it doesn't call
error_repo->finish() to stop the coroutine. wait until the lease
succeeds before spawning the error_repo

Fixes: http://tracker.ceph.com/issues/19446

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 1524a5eb249113fed8da1d47a4f92dec98db4566)

Conflicts:
        src/rgw/rgw_data_sync.cc (different argument list of RGWOmapAppend()
            function in jewel, compared to master)